--- a/arch/arm/boot/dts/exynos5422-odroidxu3-lite.dts
+++ b/arch/arm/boot/dts/exynos5422-odroidxu3-lite.dts
@@ -22,11 +22,13 @@
 };
 
 &cluster_a15_opp_table {
+	/delete-node/opp-2100000000;
 	/delete-node/opp-2000000000;
 	/delete-node/opp-1900000000;
 };
 
 &cluster_a7_opp_table {
+	/delete-node/opp-1550000000;
 	/delete-node/opp-1500000000;
 	/delete-node/opp-1400000000;
 };
