--- a/arch/arm/boot/dts/exynos5800.dtsi
+++ b/arch/arm/boot/dts/exynos5800.dtsi
@@ -24,6 +24,11 @@
 };
 
 &cluster_a15_opp_table {
+	opp-2100000000 {
+		opp-hz = /bits/ 64 <2100000000>;
+		opp-microvolt = <1313000>;
+		clock-latency-ns = <140000>;
+	};
 	opp-2000000000 {
 		opp-hz = /bits/ 64 <2000000000>;
 		opp-microvolt = <1312500>;
@@ -98,6 +103,11 @@
 };
 
 &cluster_a7_opp_table {
+	opp-1600000000 {
+		opp-hz = /bits/ 64 <1600000000>;
+		opp-microvolt = <1313000>;
+		clock-latency-ns = <140000>;
+	};
 	opp-1500000000 {
 		opp-hz = /bits/ 64 <1500000000>;
 		opp-microvolt = <1312500>;
