--- a/arch/arm/configs/odroidxu4_defconfig
+++ b/arch/arm/configs/odroidxu4_defconfig
@@ -3284,7 +3284,7 @@ CONFIG_VIDEO_USBTV=m
 #
 # Digital TV USB devices
 #
-CONFIG_DVB_USB=
+# CONFIG_DVB_USB is not set
 # CONFIG_DVB_USB_DEBUG is not set
 # CONFIG_DVB_USB_DIB3000MC is not set
 # CONFIG_DVB_USB_A800 is not set
@@ -3329,7 +3329,7 @@ CONFIG_DVB_USB=
 # CONFIG_SMS_USB_DRV is not set
 # CONFIG_DVB_B2C2_FLEXCOP_USB is not set
 # CONFIG_DVB_B2C2_FLEXCOP_USB_DEBUG is not set
-3 CONFIG_DVB_AS102=m
+# CONFIG_DVB_AS102 is not set
 
 #
 # Webcam, TV (analog/digital) USB devices
