--- a/arch/arm/configs/odroidxu4_defconfig
+++ b/arch/arm/configs/odroidxu4_defconfig
@@ -1458,8 +1458,8 @@ CONFIG_NET_FLOW_LIMIT=y
 # CONFIG_AF_KCM is not set
 # CONFIG_STREAM_PARSER is not set
 CONFIG_FIB_RULES=y
-CONFIG_WIRELESS=y
-CONFIG_WIRELESS_EXT=y
+# CONFIG_WIRELESS is not set
+# CONFIG_WIRELESS_EXT is not set
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
 CONFIG_WEXT_SPY=y
@@ -1898,7 +1898,7 @@ CONFIG_SWPHY=y
 # CONFIG_DAVICOM_PHY is not set
 # CONFIG_DP83848_PHY is not set
 # CONFIG_DP83867_PHY is not set
-# CONFIG_FIXED_PHY is not set
+CONFIG_FIXED_PHY=y
 # CONFIG_ICPLUS_PHY is not set
 # CONFIG_INTEL_XWAY_PHY is not set
 # CONFIG_LSI_ET1011C_PHY is not set
@@ -1906,7 +1906,7 @@ CONFIG_SWPHY=y
 # CONFIG_MARVELL_PHY is not set
 # CONFIG_MARVELL_10G_PHY is not set
 # CONFIG_MICREL_PHY is not set
-# CONFIG_MICROCHIP_PHY is not set
+CONFIG_MICROCHIP_PHY=m
 # CONFIG_MICROSEMI_PHY is not set
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_QSEMI_PHY is not set
@@ -1918,190 +1918,190 @@ CONFIG_SWPHY=y
 # CONFIG_VITESSE_PHY is not set
 # CONFIG_XILINX_GMII2RGMII is not set
 # CONFIG_MICREL_KS8995MA is not set
-# CONFIG_PLIP is not set
-# CONFIG_PPP is not set
-# CONFIG_PPP_BSDCOMP is not set
-# CONFIG_PPP_DEFLATE is not set
-# CONFIG_PPP_FILTER is not set
-# CONFIG_PPP_MPPE is not set
-# CONFIG_PPP_MULTILINK is not set
-# CONFIG_PPPOATM is not set
-# CONFIG_PPPOE is not set
-# CONFIG_PPTP is not set
-# CONFIG_PPPOL2TP is not set
-# CONFIG_PPP_ASYNC is not set
-# CONFIG_PPP_SYNC_TTY is not set
+CONFIG_PLIP=m
+CONFIG_PPP=m
+CONFIG_PPP_BSDCOMP=m
+CONFIG_PPP_DEFLATE=m
+CONFIG_PPP_FILTER=y
+CONFIG_PPP_MPPE=m
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPPOATM=m
+CONFIG_PPPOE=m
+CONFIG_PPTP=m
+CONFIG_PPPOL2TP=m
+CONFIG_PPP_ASYNC=m
+CONFIG_PPP_SYNC_TTY=m
 # CONFIG_SLIP is not set
-# CONFIG_SLHC is not set
-# CONFIG_USB_NET_DRIVERS is not set
-# CONFIG_USB_CATC is not set
-# CONFIG_USB_KAWETH is not set
-# CONFIG_USB_PEGASUS is not set
-# CONFIG_USB_RTL8150 is not set
-# CONFIG_USB_RTL8152 is not set
-# CONFIG_USB_LAN78XX is not set
-# CONFIG_USB_USBNET is not set
-# CONFIG_USB_NET_AX8817X is not set
-# CONFIG_USB_NET_AX88179_178A is not set
-# CONFIG_USB_NET_CDCETHER is not set
-# CONFIG_USB_NET_CDC_EEM is not set
-# CONFIG_USB_NET_CDC_NCM is not set
-# CONFIG_USB_NET_HUAWEI_CDC_NCM is not set
-# CONFIG_USB_NET_CDC_MBIM is not set
-# CONFIG_USB_NET_DM9601 is not set
-# CONFIG_USB_NET_SR9700 is not set
-# CONFIG_USB_NET_SR9800 is not set
-# CONFIG_USB_NET_SMSC75XX is not set
-# CONFIG_USB_NET_SMSC95XX is not set
-# CONFIG_USB_NET_GL620A is not set
-# CONFIG_USB_NET_NET1080 is not set
-# CONFIG_USB_NET_PLUSB is not set
-# CONFIG_USB_NET_MCS7830 is not set
-# CONFIG_USB_NET_RNDIS_HOST is not set
-# CONFIG_USB_NET_CDC_SUBSET_ENABLE is not set
-# CONFIG_USB_NET_CDC_SUBSET is not set
-# CONFIG_USB_ALI_M5632 is not set
-# CONFIG_USB_AN2720 is not set
-# CONFIG_USB_BELKIN is not set
-# CONFIG_USB_ARMLINUX is not set
-# CONFIG_USB_EPSON2888 is not set
-# CONFIG_USB_KC2190 is not set
-# CONFIG_USB_NET_ZAURUS is not set
-# CONFIG_USB_NET_CX82310_ETH is not set
-# CONFIG_USB_NET_KALMIA is not set
-# CONFIG_USB_NET_QMI_WWAN is not set
-# CONFIG_USB_HSO is not set
-# CONFIG_USB_NET_INT51X1 is not set
-# CONFIG_USB_IPHETH is not set
-# CONFIG_USB_SIERRA_NET is not set
-# CONFIG_USB_VL600 is not set
-# CONFIG_USB_NET_CH9200 is not set
-# CONFIG_WLAN is not set
-# CONFIG_WLAN_VENDOR_ADMTEK is not set
-# CONFIG_ATH_COMMON is not set
-# CONFIG_WLAN_VENDOR_ATH is not set
+CONFIG_SLHC=m
+CONFIG_USB_NET_DRIVERS=y
+CONFIG_USB_CATC=m
+CONFIG_USB_KAWETH=m
+CONFIG_USB_PEGASUS=m
+CONFIG_USB_RTL8150=m
+CONFIG_USB_RTL8152=y
+CONFIG_USB_LAN78XX=m
+CONFIG_USB_USBNET=y
+CONFIG_USB_NET_AX8817X=m
+CONFIG_USB_NET_AX88179_178A=m
+CONFIG_USB_NET_CDCETHER=y
+CONFIG_USB_NET_CDC_EEM=m
+CONFIG_USB_NET_CDC_NCM=m
+CONFIG_USB_NET_HUAWEI_CDC_NCM=m
+CONFIG_USB_NET_CDC_MBIM=m
+CONFIG_USB_NET_DM9601=m
+CONFIG_USB_NET_SR9700=m
+CONFIG_USB_NET_SR9800=m
+CONFIG_USB_NET_SMSC75XX=m
+CONFIG_USB_NET_SMSC95XX=m
+CONFIG_USB_NET_GL620A=m
+CONFIG_USB_NET_NET1080=m
+CONFIG_USB_NET_PLUSB=m
+CONFIG_USB_NET_MCS7830=m
+CONFIG_USB_NET_RNDIS_HOST=m
+CONFIG_USB_NET_CDC_SUBSET_ENABLE=y
+CONFIG_USB_NET_CDC_SUBSET=y
+CONFIG_USB_ALI_M5632=y
+CONFIG_USB_AN2720=y
+CONFIG_USB_BELKIN=y
+CONFIG_USB_ARMLINUX=y
+CONFIG_USB_EPSON2888=y
+CONFIG_USB_KC2190=y
+CONFIG_USB_NET_ZAURUS=m
+CONFIG_USB_NET_CX82310_ETH=m
+CONFIG_USB_NET_KALMIA=m
+CONFIG_USB_NET_QMI_WWAN=m
+CONFIG_USB_HSO=m
+CONFIG_USB_NET_INT51X1=m
+CONFIG_USB_IPHETH=m
+CONFIG_USB_SIERRA_NET=m
+CONFIG_USB_VL600=m
+CONFIG_USB_NET_CH9200=m
+CONFIG_WLAN=y
+CONFIG_WLAN_VENDOR_ADMTEK=y
+CONFIG_ATH_COMMON=m
+CONFIG_WLAN_VENDOR_ATH=y
 # CONFIG_ATH_DEBUG is not set
-# CONFIG_ATH9K_HW is not set
-# CONFIG_ATH9K_COMMON is not set
-# CONFIG_ATH9K_BTCOEX_SUPPORT is not set
-# CONFIG_ATH9K is not set
+CONFIG_ATH9K_HW=m
+CONFIG_ATH9K_COMMON=m
+CONFIG_ATH9K_BTCOEX_SUPPORT=y
+CONFIG_ATH9K=m
 # CONFIG_ATH9K_AHB is not set
 # CONFIG_ATH9K_DEBUGFS is not set
 # CONFIG_ATH9K_DYNACK is not set
 # CONFIG_ATH9K_WOW is not set
-# CONFIG_ATH9K_RFKILL is not set
+CONFIG_ATH9K_RFKILL=y
 # CONFIG_ATH9K_CHANNEL_CONTEXT is not set
-# CONFIG_ATH9K_PCOEM is not set
-# CONFIG_ATH9K_HTC is not set
+CONFIG_ATH9K_PCOEM=y
+CONFIG_ATH9K_HTC=m
 # CONFIG_ATH9K_HTC_DEBUGFS is not set
 # CONFIG_ATH9K_HWRNG is not set
-# CONFIG_CARL9170 is not set
-# CONFIG_CARL9170_LEDS is not set
-# CONFIG_CARL9170_WPC is not set
-# CONFIG_CARL9170_HWRNG is not set
+CONFIG_CARL9170=m
+CONFIG_CARL9170_LEDS=y
+CONFIG_CARL9170_WPC=y
+CONFIG_CARL9170_HWRNG=y
 # CONFIG_ATH6KL is not set
-# CONFIG_AR5523 is not set
-# CONFIG_ATH10K is not set
+CONFIG_AR5523=m
+CONFIG_ATH10K=m
 # CONFIG_ATH10K_SDIO is not set
 # CONFIG_ATH10K_USB is not set
 # CONFIG_ATH10K_DEBUG is not set
 # CONFIG_ATH10K_DEBUGFS is not set
 # CONFIG_ATH10K_TRACING is not set
-# CONFIG_WCN36XX is not set
+CONFIG_WCN36XX=m
 # CONFIG_WCN36XX_DEBUGFS is not set
-# CONFIG_WLAN_VENDOR_ATMEL is not set
-# CONFIG_AT76C50X_USB is not set
-# CONFIG_WLAN_VENDOR_BROADCOM is not set
+CONFIG_WLAN_VENDOR_ATMEL=y
+CONFIG_AT76C50X_USB=m
+CONFIG_WLAN_VENDOR_BROADCOM=y
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
-# CONFIG_BRCMUTIL is not set
+CONFIG_BRCMUTIL=m
 # CONFIG_BRCMSMAC is not set
-# CONFIG_BRCMFMAC is not set
-# CONFIG_BRCMFMAC_PROTO_BCDC is not set
+CONFIG_BRCMFMAC=m
+CONFIG_BRCMFMAC_PROTO_BCDC=y
 # CONFIG_BRCMFMAC_SDIO is not set
-# CONFIG_BRCMFMAC_USB is not set
+CONFIG_BRCMFMAC_USB=y
 # CONFIG_BRCM_TRACING is not set
 # CONFIG_BRCMDBG is not set
-# CONFIG_WLAN_VENDOR_CISCO is not set
-# CONFIG_WLAN_VENDOR_INTEL is not set
-# CONFIG_WLAN_VENDOR_INTERSIL is not set
+CONFIG_WLAN_VENDOR_CISCO=y
+CONFIG_WLAN_VENDOR_INTEL=y
+CONFIG_WLAN_VENDOR_INTERSIL=y
 # CONFIG_HOSTAP is not set
-# CONFIG_P54_COMMON is not set
-# CONFIG_P54_USB is not set
+CONFIG_P54_COMMON=m
+CONFIG_P54_USB=m
 # CONFIG_P54_SPI is not set
-# CONFIG_P54_LEDS is not set
-# CONFIG_WLAN_VENDOR_MARVELL is not set
-# CONFIG_LIBERTAS is not set
-# CONFIG_LIBERTAS_USB is not set
+CONFIG_P54_LEDS=y
+CONFIG_WLAN_VENDOR_MARVELL=y
+CONFIG_LIBERTAS=m
+CONFIG_LIBERTAS_USB=m
 # CONFIG_LIBERTAS_SDIO is not set
 # CONFIG_LIBERTAS_SPI is not set
 # CONFIG_LIBERTAS_DEBUG is not set
 # CONFIG_LIBERTAS_MESH is not set
-# CONFIG_LIBERTAS_THINFIRM is not set
+CONFIG_LIBERTAS_THINFIRM=m
 # CONFIG_LIBERTAS_THINFIRM_DEBUG is not set
-# CONFIG_LIBERTAS_THINFIRM_USB is not set
-# CONFIG_MWIFIEX is not set
+CONFIG_LIBERTAS_THINFIRM_USB=m
+CONFIG_MWIFIEX=m
 # CONFIG_MWIFIEX_SDIO is not set
-# CONFIG_MWIFIEX_USB is not set
-# CONFIG_WLAN_VENDOR_MEDIATEK is not set
-# CONFIG_MT7601U is not set
-# CONFIG_WLAN_VENDOR_RALINK is not set
-# CONFIG_RT2X00 is not set
-# CONFIG_RT2500USB is not set
-# CONFIG_RT73USB is not set
-# CONFIG_RT2800USB is not set
-# CONFIG_RT2800USB_RT33XX is not set
-# CONFIG_RT2800USB_RT35XX is not set
-# CONFIG_RT2800USB_RT3573 is not set
-# CONFIG_RT2800USB_RT53XX is not set
-# CONFIG_RT2800USB_RT55XX is not set
-# CONFIG_RT2800USB_UNKNOWN is not set
-# CONFIG_RT2800_LIB is not set
-# CONFIG_RT2X00_LIB_USB is not set
-# CONFIG_RT2X00_LIB is not set
-# CONFIG_RT2X00_LIB_FIRMWARE is not set
-# CONFIG_RT2X00_LIB_CRYPTO is not set
-# CONFIG_RT2X00_LIB_LEDS is not set
+CONFIG_MWIFIEX_USB=m
+CONFIG_WLAN_VENDOR_MEDIATEK=y
+CONFIG_MT7601U=m
+CONFIG_WLAN_VENDOR_RALINK=y
+CONFIG_RT2X00=m
+CONFIG_RT2500USB=m
+CONFIG_RT73USB=m
+CONFIG_RT2800USB=m
+CONFIG_RT2800USB_RT33XX=y
+CONFIG_RT2800USB_RT35XX=y
+CONFIG_RT2800USB_RT3573=y
+CONFIG_RT2800USB_RT53XX=y
+CONFIG_RT2800USB_RT55XX=y
+CONFIG_RT2800USB_UNKNOWN=y
+CONFIG_RT2800_LIB=m
+CONFIG_RT2X00_LIB_USB=m
+CONFIG_RT2X00_LIB=m
+CONFIG_RT2X00_LIB_FIRMWARE=y
+CONFIG_RT2X00_LIB_CRYPTO=y
+CONFIG_RT2X00_LIB_LEDS=y
 # CONFIG_RT2X00_DEBUG is not set
-# CONFIG_WLAN_VENDOR_REALTEK is not set
+CONFIG_WLAN_VENDOR_REALTEK=y
 # CONFIG_RTL8187 is not set
-# CONFIG_RTL_CARDS is not set
-# CONFIG_RTL8192CU is not set
-# CONFIG_RTLWIFI is not set
-# CONFIG_RTLWIFI_USB is not set
-# CONFIG_RTLWIFI_DEBUG is not set
-# CONFIG_RTL8192C_COMMON is not set
-# CONFIG_RTL8XXXU is not set
+CONFIG_RTL_CARDS=m
+CONFIG_RTL8192CU=m
+CONFIG_RTLWIFI=m
+CONFIG_RTLWIFI_USB=m
+CONFIG_RTLWIFI_DEBUG=y
+CONFIG_RTL8192C_COMMON=m
+CONFIG_RTL8XXXU=m
 # CONFIG_RTL8XXXU_UNTESTED is not set
-# CONFIG_WLAN_VENDOR_RSI is not set
+CONFIG_WLAN_VENDOR_RSI=y
 # CONFIG_RSI_91X is not set
-# CONFIG_WLAN_VENDOR_ST is not set
+CONFIG_WLAN_VENDOR_ST=y
 # CONFIG_CW1200 is not set
-# CONFIG_WLAN_VENDOR_TI is not set
+CONFIG_WLAN_VENDOR_TI=y
 # CONFIG_WL1251 is not set
 # CONFIG_WL12XX is not set
 # CONFIG_WL18XX is not set
 # CONFIG_WLCORE is not set
-# CONFIG_WLAN_VENDOR_ZYDAS is not set
-# CONFIG_USB_ZD1201 is not set
-# CONFIG_ZD1211RW is not set
+CONFIG_WLAN_VENDOR_ZYDAS=y
+CONFIG_USB_ZD1201=m
+CONFIG_ZD1211RW=m
 # CONFIG_ZD1211RW_DEBUG is not set
-# CONFIG_WLAN_VENDOR_QUANTENNA is not set
-# CONFIG_RTL8812AU is not set
-# CONFIG_RTL8188EU is not set
+CONFIG_WLAN_VENDOR_QUANTENNA=y
+CONFIG_RTL8812AU=m
+CONFIG_RTL8188EU=m
 # CONFIG_MAC80211_HWSIM is not set
-# CONFIG_USB_NET_RNDIS_WLAN is not set
+CONFIG_USB_NET_RNDIS_WLAN=m
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
 #
-# CONFIG_WAN is not set
-# CONFIG_HDLC is not set
-# CONFIG_HDLC_RAW is not set
-# CONFIG_HDLC_RAW_ETH is not set
-# CONFIG_HDLC_CISCO is not set
-# CONFIG_HDLC_FR is not set
-# CONFIG_HDLC_PPP is not set
+CONFIG_WAN=y
+CONFIG_HDLC=m
+CONFIG_HDLC_RAW=m
+CONFIG_HDLC_RAW_ETH=m
+CONFIG_HDLC_CISCO=m
+CONFIG_HDLC_FR=m
+CONFIG_HDLC_PPP=m
 
 #
 # X.25/LAPB support is disabled
@@ -2556,7 +2556,7 @@ CONFIG_SPI_SPIDEV=m
 # CONFIG_SPMI is not set
 # CONFIG_HSI is not set
 CONFIG_PPS=y
-# CONFIG_PPS_DEBUG is not set
+CONFIG_PPS_DEBUG=y
 
 #
 # PPS clients support
